example/logs_example/vivado_logs/example1_test2.txt

****** Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
  **** SW Build 2552052 on Fri May 24 14:47:09 MDT 2019
  **** IP Build 2548770 on Fri May 24 18:01:18 MDT 2019
    ** Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.

source /opt/xilinx/Vivado/2019.1/scripts/vivado_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/opt/xilinx/Vivado/2019.1/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'vivado' on host 'lesc-server' (Linux_x86_64 version 4.15.0-106-generic) on Sat Aug 01 01:51:21 UTC 2020
INFO: [HLS 200-10] On os Ubuntu 18.04.4 LTS
INFO: [HLS 200-10] In directory '/home/vivado/HLStools/example_vivado/example1'
[2K

vivado_hls> 
[12C[2K

vivado_hls> o
[13C[2K

vivado_hls> op
[14C[2K

vivado_hls> ope
[15C[2K

vivado_hls> open
[16C[2K

vivado_hls> open_
[17C[2K

vivado_hls> open_p
[18C[2K

vivado_hls> open_project
[24C[2K

vivado_hls> open_project 
[25C[2K

vivado_hls> open_project t
[26C[2K

vivado_hls> open_project te
[27C[2K

vivado_hls> open_project tes
[28C[2K

vivado_hls> open_project test
[29C[2K

vivado_hls> open_project test2
[30C
INFO: [HLS 200-10] Creating and opening project '/home/vivado/HLStools/example_vivado/example1/test2'.
0
[2K

vivado_hls> 
[12C[2K

vivado_hls> a
[13C[2K

vivado_hls> ad
[14C[2K

vivado_hls> add
[15C[2K

vivado_hls> add_
[16C[2K

vivado_hls> add_f
[17C[2K

vivado_hls> add_files
[21C[2K

vivado_hls> add_files 
[22C[2K

vivado_hls> add_files e
[23C[2K

vivado_hls> add_files ex
[24C[2K

vivado_hls> add_files example1_
[31C[2K

vivado_hls> add_files example1_t
[32C[2K

vivado_hls> add_files example1_test
[35C[2K

vivado_hls> add_files example1_test2
[36C[2K

vivado_hls> add_files example1_test2.c
[38C
INFO: [HLS 200-10] Adding design file 'example1_test2.c' to the project
[2K

vivado_hls> 
[12C[2K

vivado_hls> c
[13C[2K

vivado_hls> ca
[14C[2K

vivado_hls> cat
[15C[2K

vivado_hls> cat 
[16C[2K

vivado_hls> cat e
[17C[2K

vivado_hls> cat ex
[18C[2K

vivado_hls> cat example1_
[25C[2K

vivado_hls> cat example1_t
[26C[2K

vivado_hls> cat example1_test
[29C[2K

vivado_hls> cat example1_test2
[30C[2K

vivado_hls> cat example1_test2.c
[32C
// Example: return constant pointer 

#include <stdlib.h>
#include <stdio.h>

const int *test(int a) {

	int b[a];

	for (int i = 0; i < a; i++) {
		b[i] = i + a;
	}

	return b;
}

int main() {

	int a = 10;
	int *b;

	b = test(a);	

	return 0;
}
[2K

vivado_hls> 
[12C[2K

vivado_hls> s
[13C[2K

vivado_hls> se
[14C[2K

vivado_hls> set
[15C[2K

vivado_hls> set_
[16C[2K

vivado_hls> set_t
[17C[2K

vivado_hls> set_top
[19C[2K

vivado_hls> set_top 
[20C[2K

vivado_hls> set_top t
[21C[2K

vivado_hls> set_top te
[22C[2K

vivado_hls> set_top tes
[23C[2K

vivado_hls> set_top test
[24C
[2K

vivado_hls> 
[12C[2K

vivado_hls> o
[13C[2K

vivado_hls> op
[14C[2K

vivado_hls> ope
[15C[2K

vivado_hls> open
[16C[2K

[1;32mopen 
open_project 
open_solution 
[0m[32mopen 
openssl 
openssl.exe 
openvpn 
openvt 
[0m
[2K

vivado_hls> open
[16C[2K

vivado_hls> open_
[17C[2K

vivado_hls> open_s
[18C[2K

vivado_hls> open_solution
[25C[2K

vivado_hls> open_solution 
[26C[2K

vivado_hls> open_solution s
[27C[2K

vivado_hls> open_solution so
[28C[2K

vivado_hls> open_solution sol
[29C
INFO: [HLS 200-10] Creating and opening solution '/home/vivado/HLStools/example_vivado/example1/test2/sol'.
/home/vivado/HLStools/example_vivado/example1/test2/vivado_hls.app
[2K

vivado_hls> 
[12C
INFO: [HLS 200-10] Setting target device to 'xc7k160t-fbg484-1'

INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
[2K

vivado_hls> create_clock -period 10ns -name default
[51C
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
[2K

vivado_hls> 
[12C[2K

vivado_hls> c
[13C[2K

vivado_hls> cs
[14C[2K

vivado_hls> csy
[15C[2K

vivado_hls> csynth_design
[25C
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'example1_test2.c' ... 
WARNING: [HLS 200-40] In file included from example1_test2.c:1:
example1_test2.c:14:9: warning: address of stack memory associated with local variable 'b' returned [-Wreturn-stack-address]
 return b;
        ^
example1_test2.c:22:4: warning: assigning to 'int *' from 'const int *' discards qualifiers [-Wincompatible-pointer-types]
 b = test(a);
   ^ ~~~~~~~
2 warnings generated.
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:13 ; elapsed = 00:00:56 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 1318 ; free virtual = 33693
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:13 ; elapsed = 00:00:56 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 1318 ; free virtual = 33693
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:15 ; elapsed = 00:00:57 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 1317 ; free virtual = 33692
INFO: [HLS 200-10] Checking synthesizability ...
ERROR: [SYNCHK 200-75] example1_test2.c:6: function 'test' returns a pointer value; please inline this function or change return to an argument.
INFO: [SYNCHK 200-10] 1 error(s), 0 warning(s).
ERROR: [HLS 200-70] Synthesizability check failed.
[2K

vivado_hls> 
[12C[2K

vivado_hls> csynth_design
[25C[2K

vivado_hls> csynth_desig
[24C[2K

vivado_hls> csynth_desi
[23C[2K

vivado_hls> csynth_des
[22C[2K

vivado_hls> csynth_de
[21C[2K

vivado_hls> csynth_d
[20C[2K

vivado_hls> csynth_
[19C[2K

vivado_hls> csynth
[18C[2K

vivado_hls> csynt
[17C[2K

vivado_hls> csyn
[16C[2K

vivado_hls> csy
[15C[2K

vivado_hls> cs
[14C[2K

vivado_hls> c
[13C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12C[2K

vivado_hls> 
[12CINFO: [Common 17-206] Exiting vivado_hls at Sat Aug  1 01:53:20 2020...
